stateDiagram-v2
    %% L++ State Diagram: Python Function Decoder
    [*] --> idle
    idle --> parsing : DECODE [filePath is not None and le...]
    parsing --> extracting : AUTO [ast is not None]
    extracting --> tracing : AUTO [exports is not None and imp...]
    tracing --> computing : AUTO [internalCalls is not None]
    parsing --> idle : RESET
    extracting --> idle : RESET
    tracing --> idle : RESET
    computing --> idle : RESET